# nlp2uri

./: .aider.chat.history.md  .gitignore  CHANGELOG.md  Dockerfile  README.md  SUMD.md  SUMR.md  TODO.md  app.doql.less  docker-compose.yml  goal.yaml  planfile.yaml  pyproject.toml
.github/workflows/: ci.yml
.koru/: event-store.jsonl
.koru/events/: observability.jsonl
.koru/sllm/prompts/: prompt-20260607-131357-be1920ee67a.md
docs/: getv_uri.v1.md  mcp-tools.md  orchestration.md  roadmap.md  system_map_uri.v1.md
examples/: README.md  basic_resolve.py  run-e2e.sh  run_all.sh
examples/execute/dry-run/: README.md  e2e.sh  main.py
examples/integrators/mcp-stdio/: README.md  e2e.sh  mcp-config.cursor.json  mcp-config.json
examples/integrators/rest-api/: README.md  e2e.sh
examples/integrators/shell-export/: README.md  e2e.sh
examples/mcp/tool-handoff/: README.md  e2e.sh  main.py
examples/resolve/new-intents/: e2e.sh
examples/resolve/nl-to-uri/: README.md  e2e.sh  main.py
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml  prompt.txt
schemas/: Makefile  README.md  buf.gen.yaml  buf.yaml  registry.yaml  uri_cqrs_es.v1.md
schemas/codegen/: export_driver_stubs.py  export_mcp_schemas.py  fix_proto_imports.py  generate.sh  scaffold_scheme.py
schemas/codegen/templates/: driver.py.j2
schemas/common/v1/: api.proto  commands.proto  driver.proto  events.proto  queries.proto  uri.proto
schemas/schemes/access/v1/: README.md  aggregate.proto  api.proto  commands.proto  driver.proto  events.proto  openapi.yaml  queries.proto
schemas/schemes/app/v1/: README.md  aggregate.proto  api.proto  commands.proto  driver.proto  events.proto  openapi.yaml  queries.proto
schemas/schemes/artifact/v1/: README.md  aggregate.proto  api.proto  commands.proto  driver.proto  events.proto  openapi.yaml  queries.proto
schemas/schemes/command/v1/: README.md  aggregate.proto  api.proto  commands.proto  driver.proto  events.proto  openapi.yaml  queries.proto
schemas/schemes/container/v1/: README.md  aggregate.proto  api.proto  commands.proto  driver.proto  events.proto  openapi.yaml  queries.proto
schemas/schemes/conversation/v1/: README.md  aggregate.proto  api.proto  commands.proto  driver.proto  events.proto  openapi.yaml  queries.proto
schemas/schemes/deploy/v1/: README.md  aggregate.proto  api.proto  commands.proto  driver.proto  events.proto  openapi.yaml  queries.proto
schemas/schemes/desktop_screenshot/v1/: README.md  aggregate.proto  api.proto  commands.proto  driver.proto  events.proto  openapi.yaml  queries.proto
scripts/: install-editable.sh  test-cqrs-smoke.sh  test-live-registry.sh  testapp-handler.sh
src/nlp2uri/: __init__.py  __main__.py  cli.py  cli_parser.py  compile.py  config.py  control_cli.py  control_compile.py  control_execute.py  desktop_apps.py  mcp.py  models.py  parse_nl.py  platform_detect.py  resolve.py  runtime.py  service.py
src/nlp2uri/adapters/: __init__.py  base.py  cli.py  mcp.py  rest.py  shell.py
src/nlp2uri/cqrs/: __init__.py  base.py  dispatcher.py  event_store.py  http_store.py  plugins.py  registry.py
src/nlp2uri/host/: __init__.py  artifact.py  endpoint.py  resource.py
src/nlp2uri/integrators/: __init__.py  mcp_server.py  rest_server.py
src/nlp2uri/schemes/: __init__.py  build.py  desktop.py  file.py  http.py  ide.py  util.py
src/nlp2uri/systemmap/: __init__.py  compile.py  context.py  encode.py  export.py  fallback.py  getv_load.py  getv_uri.py  index.py  koru_ide.py  load.py  resolve.py  uri.py
testql-scenarios/: generated-cli-tests.testql.toon.yaml  generated-from-pytests.testql.toon.yaml  koru-ide-control-roundtrip.testql.toon.yaml
tests/: conftest.py  test_adapters.py  test_artifact_driver.py  test_cli.py  test_compile.py  test_config.py  test_container_driver.py  test_cqrs_drivers.py  test_getv_uri.py  test_http_event_store.py  test_ide_control.py  test_intents_phase2.py  test_koru_control_execute.py  test_koru_ide_control.py  test_koru_ide_systemmap.py  test_mcp.py  test_platforms.py  test_plugins.py  test_resolve.py  test_resource_driver.py  test_rest_server.py  test_schemas_registry.py  test_service.py  test_systemmap.py
tests/integration/: test_xdg_handler.py
(+154 files in other folders)
