[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp2uri"
version = "0.4.8"
description = "Natural language to URI resolution and cross-platform local URI execution"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Semcod" }, {name = "Tom Sapletta",email = "tom@sapletta.com"}]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]
linux = ["dbus-python>=1.3.2; sys_platform == 'linux'"]
windows = ["pywin32>=306; sys_platform == 'win32'"]
full = ["psutil>=6.0"]
envmap = ["env2llm>=0.1.4", "getv>=0.2.0"]
codegen = ["pyyaml>=6.0", "grpcio-tools>=1.60", "protobuf>=4.25"]

[project.scripts]
nlp2uri = "nlp2uri.cli:main"
nlp2uri-mcp = "nlp2uri.integrators.mcp_server:main"
nlp2uri-serve = "nlp2uri.integrators.rest_server:main"

[project.entry-points."nlp2uri.drivers"]
artifact-filesystem = "nlp2uri.cqrs.drivers.artifact_filesystem:ArtifactFilesystemDriver"
command-curl = "nlp2uri.cqrs.drivers.command_curl:CommandCurlDriver"
container-docker = "nlp2uri.cqrs.drivers.container_docker:ContainerDockerDriver"
endpoint-curl = "nlp2uri.cqrs.drivers.endpoint_curl:EndpointCurlDriver"
getv-getv_cli = "nlp2uri.cqrs.drivers.getv_cli:GetvCliDriver"
resource-probe = "nlp2uri.cqrs.drivers.resource_probe:ResourceProbeDriver"
runtime-curl = "nlp2uri.cqrs.drivers.runtime_curl:RuntimeCurlDriver"
service-curl = "nlp2uri.cqrs.drivers.service_ops:ServiceCurlDriver"
service-docker = "nlp2uri.cqrs.drivers.service_ops:ServiceDockerDriver"
service-systemd = "nlp2uri.cqrs.drivers.service_ops:ServiceSystemdDriver"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: Linux x-scheme-handler tests (set NLP2URI_INTEGRATION=1)",
]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
